// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Iframe Processor should process iframes from data-src 1`] = `
<div>
  <mocked-iframe
    data-src="https://sileajs.com"
    src="https://sileajs.com"
    title="Silea"
    width="500"
  />
</div>
`;

exports[`Iframe Processor should process iframes from src 1`] = `
<div>
  <mocked-iframe
    src="https://sileajs.com"
    title="Silea"
    width="500"
  />
</div>
`;
